tests/models/struct/named/u8/pass/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2)]
    value: u8,
}
fn main() {}
