tests/models/struct/named/u8/fail/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2.0)]
    value: u8,
}
fn main() {}
